--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,7 @@
         }
       }
     },
-    "@swimlane/ngx-datatable": {
+    "at-ngx-datatable": {
       "projectType": "library",
       "root": "projects/swimlane/ngx-datatable",
       "sourceRoot": "projects/swimlane/ngx-datatable/src",
@@ -147,5 +147,8 @@
       }
     }
   },
-  "defaultProject": "ngx-datatable"
+  "defaultProject": "at-ngx-datatable",
+  "cli": {
+    "analytics": false
+  }
 }
