--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "ngx-datatable",
-  "version": "0.0.0",
+  "name": "at-ngx-datatable",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:lib:prod": "ng build @swimlane/ngx-datatable --prod",
+    "build:lib:prod": "ng build at-ngx-datatable --prod",
     "copy-files": "cp README.md dist/swimlane/ngx-datatable/README.md && cp LICENSE dist/swimlane/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/swimlane/ngx-datatable/assets\" && cpx \"projects/swimlane/ngx-datatable/src/lib/themes/**/*\" \"dist/swimlane/ngx-datatable/themes\"",
     "build:css": "scss-bundle  -c ./scss-bundle.config.json && node-sass -o dist/swimlane/ngx-datatable/themes dist/swimlane/ngx-datatable/themes && node-sass -o dist/swimlane/ngx-datatable dist/swimlane/ngx-datatable",
     "test": "run-p lint test:unit",
-    "test:unit": "ng test @swimlane/ngx-datatable --watch=false",
-    "test:watch": "ng test @swimlane/ngx-datatable",
-    "test:ci": "ng test @swimlane/ngx-datatable --watch=false --progress=false",
+    "test:unit": "ng test at-ngx-datatable --watch=false",
+    "test:watch": "ng test at-ngx-datatable",
+    "test:ci": "ng test at-ngx-datatable --watch=false --progress=false",
     "ci": "run-s lint prettier:ci test:ci",
     "lint": "ng lint",
     "e2e": "ng e2e",
