--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "6.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "build:lib:prod": "ng build at-ngx-datatable --configuration production",
     "copy-files": "cp README.md dist/swimlane/ngx-datatable/README.md && cp LICENSE dist/swimlane/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/swimlane/ngx-datatable/assets\" && cpx \"projects/swimlane/ngx-datatable/src/lib/themes/**/*\" \"dist/swimlane/ngx-datatable/themes\"",
@@ -12,7 +12,7 @@
     "test:unit": "ng test at-ngx-datatable --watch=false",
     "test:watch": "ng test at-ngx-datatable",
     "test:ci": "ng test at-ngx-datatable --watch=false --progress=false --browsers=ChromeHeadlessCI",
-    "ci": "run-s lint prettier:ci test:ci",
+    "ci": "run-s prettier:ci test:ci",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prettier": "prettier --write \"{src,projects}/*.{js,ts,html,scss,css,md,json}\"",
@@ -31,11 +31,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.3.0",
-    "@angular/cdk": "^13.1.1",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.3.0",
     "@angular/core": "^14.3.0",
     "@angular/forms": "^14.3.0",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
@@ -45,6 +46,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.13",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
     "@angular/cli": "^14.2.13",
     "@angular/compiler-cli": "^14.3.0",
     "@angular/language-service": "^14.3.0",
@@ -52,10 +58,15 @@
     "@types/jasmine": "^3.6.11",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.27",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "angular-cli-ghpages": "^0.6.0",
-    "codelyzer": "^6.0.2",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.28.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
     "husky": "^4.3.8",
     "jasmine": "^3.9.0",
     "jasmine-core": "~3.6.0",
@@ -73,7 +84,6 @@
     "protractor": "~7.0.0",
     "scss-bundle": "^3.1.1",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
