--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~4.8.4"
+    "typescript": "^5.3.3"
   },
   "husky": {
     "hooks": {
