--- a/angular.json
+++ b/angular.json
@@ -77,18 +77,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-datatable:build"
+            "buildTarget": "ngx-datatable:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-datatable:build:production"
+              "buildTarget": "ngx-datatable:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-datatable:build"
+            "buildTarget": "ngx-datatable:build"
           }
         },
         "test": {
@@ -158,6 +158,14 @@
           }
         }
       }
+    }
+  },
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
     }
   }
 }
