update project name in angular.json

--- a/angular.json
+++ b/angular.json
@@ -119,7 +119,7 @@
         }
       }
     },
-    "@swimlane/ngx-datatable": {
+    "at-ngx-datatable": {
       "projectType": "library",
       "root": "projects/swimlane/ngx-datatable",
       "sourceRoot": "projects/swimlane/ngx-datatable/src",
